# agentic-ai-foundations

./: .env.example  .gitignore  langgraph.json  pyproject.toml
agents-cookbook/: cold_email_sales_outreach.ipynb  email_agent.ipynb  email_agent.py  wedding_planners.ipynb
assets/: download_chinook_db.ipynb
assets/my_linkedin_profile/: summary.txt
lc-create-agent-basics/: basic_models_plus_prompts.ipynb  context_and_state.ipynb  langgraph.json  mcp_travel_agent.ipynb  middleware_basics.ipynb  middleware_dynamic.ipynb  multi_agent_basics.ipynb  personal_chef.ipynb  personal_chef.py
lc-create-agent-basics/resources/: mcp_server.py
patterns/: eval_opt_pattern_career_alterego.ipynb  parallelization_pattern_jokes_ranking.ipynb
utils/: custom_tools.py  mermaid.py  telegram.py
