[project]
name = "agents"
version = "0.1.0"
description = "project for learning agentic ai foundations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "langchain-groq>=1.1.1",
    "langchain>=1.2.0",
    "langchain-google-genai>=4.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
